fix line break on comments

--- a/app/stylesheets/shapado/modules/comments.sass
+++ b/app/stylesheets/shapado/modules/comments.sass
@@ -36,9 +36,8 @@
       float: left
       margin: 5px 5px 0 0
     p
-      display: inline
-      font-size: 12px
-      line-height: 15px
+      font-size: 12.5px
+      line-height: 14px
     .actions
       clear: left
       margin: 3px 0 0 0
